--- a/starweb/app/views/clients/index.html.erb
+++ b/starweb/app/views/clients/index.html.erb
@@ -3,7 +3,8 @@
     Clientes
   </h1>
   <ol class="breadcrumb">
-    <li class="#">Clientes</li>
+    <li><a href="#">Clientes</a></li>
+    <li class="active">Index</a></li>
   </ol> 
 </div>
 
