--- a/starweb/app/views/clients/new.html.erb
+++ b/starweb/app/views/clients/new.html.erb
@@ -3,8 +3,9 @@
     Clientes
   </h1>
   <ol class="breadcrumb">
-    <li><%= link_to "Clientes", clients_path %></li>
-    <li class="#">Nuevo</li>
+    <li><a href="">Clientes</a></li>
+    <li><%= link_to "Index", clients_path %></li>
+    <li class="active">Nuevo</li>
   </ol> 
 </div>
 
