--- a/starweb/app/views/orders/index.html.erb
+++ b/starweb/app/views/orders/index.html.erb
@@ -3,7 +3,8 @@
     Pedidos
   </h1>
   <ol class="breadcrumb">
-    <li class="#">Pedidos</li>
+    <li><a href="#">Pedidos</a></li>
+    <li class="active">Index</a></li>
   </ol>
 </div>
 
