--- a/starweb/app/views/products/edit.html.erb
+++ b/starweb/app/views/products/edit.html.erb
@@ -3,8 +3,9 @@
     Producto
   </h1>
   <ol class="breadcrumb">
-    <li><%= link_to "Productos", products_path %></li>
-    <li class="#">Editar</li>
+    <li><a href="">Productos</a></li>
+    <li><%= link_to "Index", products_path %></li>
+    <li class="active">Editar</li>
   </ol> 
 </div>
 
