--- a/starweb/app/views/products/index.html.erb
+++ b/starweb/app/views/products/index.html.erb
@@ -3,7 +3,8 @@
     Productos
   </h1>
   <ol class="breadcrumb">
-    <li class="#">Productos</li>
+    <li><a href="#">Productos</a></li>
+    <li class="active">Index</a></li>
   </ol> 
 </div>
 
