--- a/starweb/app/views/reports/index.html.erb
+++ b/starweb/app/views/reports/index.html.erb
@@ -4,9 +4,8 @@
   </h1>
 
   <ol class="breadcrumb">
-    <li><%= link_to "Home", orders_path %></li>
-    <li><a href="#">Dashboard</a></li>
-    <li class="active">Data</li>
+    <li><a href="#">Reportes</a></li>
+    <li class="active">Index</a></li>
   </ol>
 </div>
 
