--- a/starweb/app/views/sponsors/index.html.erb
+++ b/starweb/app/views/sponsors/index.html.erb
@@ -3,7 +3,8 @@
     Auspiciantes
   </h1>
   <ol class="breadcrumb">
-    <li class="#">Auspiciantes</li>
+    <li><a href="#">Auspiciantes</a></li>
+    <li class="active">Index</a></li>
   </ol> 
 </div>
 
