--- a/starweb/app/views/supplies/index.html.erb
+++ b/starweb/app/views/supplies/index.html.erb
@@ -3,7 +3,8 @@
     Insumos
   </h1>
   <ol class="breadcrumb">
-    <li class="#">Insumos</li>
+    <li><a href="#">Insumos</a></li>
+    <li class="active">Index</a></li>
   </ol> 
 </div>
 
