--- a/starweb/app/views/supplies/new.html.erb
+++ b/starweb/app/views/supplies/new.html.erb
@@ -3,8 +3,7 @@
     Insumos
   </h1>
   <ol class="breadcrumb">
-    <li><a href="#">Inicio</a></li>
-    <li><a href="#">Insumos</a></li>
+    <li><%= link_to "Insumos", supplies_path %></li>
     <li class="active">Nuevo</li>
   </ol> 
 </div>
