--- a/starweb/app/assets/stylesheets/custom-styles.css
+++ b/starweb/app/assets/stylesheets/custom-styles.css
@@ -6,6 +6,11 @@ body {
     background: #1F2837;
 }
 
+label {
+  font-size: 1.1rem;
+  color: #6b6b6b;
+}
+
 div .col-md-12 {
   background-color: white;
   border-radius: 4px;
@@ -26,6 +31,7 @@ div .col-md-12 {
 
 select {
   display: block !important;
+  border: 1px solid #9e9e9e;
 }
 
 a:hover, a:focus{
