--- a/starweb/app/views/products/_form.html.erb
+++ b/starweb/app/views/products/_form.html.erb
@@ -12,22 +12,22 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label 'Nombre' %>
     <%= form.text_field :name %>
   </div>
 
   <div class="field">
-    <%= form.label :price %>
+    <%= form.label 'Precio' %>
     <%= form.text_field :price %>
   </div>
 
   <div class="field">
-    <%= form.label :image %>
+    <%= form.label 'Imagen' %>
     <%= form.file_field :image, class: 'field' %>
   </div><br>
 
   <div class="field">
-    <%= form.label :description %>
+    <%= form.label 'Descripción' %>
     <%= form.text_field :description %>
   </div>
 
@@ -41,6 +41,6 @@
   <br>
 
   <div class="actions">
-    <%= form.submit class: 'btn btn-primary' %>
+    <%= form.submit 'Guardar', class: 'btn btn-primary' %>
   </div>
 <% end %>
