--- a/starweb/app/views/sponsors/_form.html.erb
+++ b/starweb/app/views/sponsors/_form.html.erb
@@ -22,6 +22,6 @@
   </div><br>
 
   <div class="actions">
-    <%= form.submit class: 'btn btn-primary' %>
+    <%= form.submit 'Guardar', class: 'btn btn-primary' %>
   </div>
 <% end %>
