--- a/starweb/app/views/supplies/_form.html.erb
+++ b/starweb/app/views/supplies/_form.html.erb
@@ -12,22 +12,22 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
+    <%= form.label 'Nombre' %>
     <%= form.text_field :name %>
   </div>
 
   <div class="field">
-    <%= form.label :image %>
+    <%= form.label 'Imagen' %>
     <%= form.file_field :image, class: 'field' %>
-  </div>
+  </div><br>
 
   <div class="field">
-    <%= form.label :stock %>
+    <%= form.label 'Stock' %>
     <%= form.text_field :stock %>
   </div>
 
   <div class="field">
-    <%= form.label :description %>
+    <%= form.label 'Descripción' %>
     <%= form.text_field :description %>
   </div>
 
