--- a/starweb/app/assets/stylesheets/custom-styles.css
+++ b/starweb/app/assets/stylesheets/custom-styles.css
@@ -6,6 +6,11 @@ body {
     background: #1F2837;
 }
 
+.waves-effect img {
+  z-index: unset !important;
+  width: 50%;
+}
+
 label {
   font-size: 1.1rem;
   color: #6b6b6b;
