--- a/starweb/app/views/products/index.html.erb
+++ b/starweb/app/views/products/index.html.erb
@@ -9,36 +9,31 @@
 </div>
 
 <div id="page-inner">
+  <%= link_to 'Nuevo', new_product_path, class: 'btn btn-primary' %>
   <div class="row">
-    <div class="col-md-12">
-      <div class="table-responsive">
-        <table class="table table-striped table-bordered table-hover">
-          <thead>
-            <tr>
-              <th>Nombre</th>
-              <th>Precio</th>
-              <th>Imagen</th>
-              <th>Descripción</th>
-              <th>Insumos</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @products.each do |product| %>
-            <tr>
-              <td><%= product.name %></td>
-              <td><%= product.price %></td>
-              <td><%= image_tag product.image.url(:thumb)%></td>
-              <td><%= product.description %></td>
-              <td><% product.supplies.each do |supply|%>
-                <%= supply.name %>
-                <%end%>
-              </td>
-              <td style="width: 70px"><%= link_to '', edit_product_path(product) , class: 'fas fa-edit' %> | <%= link_to '', product, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></td>
-            <% end %>
-          </tbody>
-        </table>
-        <%= link_to 'Nuevo', new_product_path, class: 'btn btn-primary' %>
+    <% @products.each do |product| %>
+    <div class="col-md-3 col-sm-3">
+      <div class="card">
+        <div class="card-image waves-effect waves-block waves-light">
+          <%= image_tag product.image.url(:thumb)%>
+        </div>
+        <div class="card-content">
+          <span class="card-title activator grey-text text-darken-4"><%= product.name %><i class="material-icons right">more_vert</i></span><br>
+          <p><label>Precio:</label>  <b><%= product.price %></b></p><br>
+          <div class="list-group">
+            <%= link_to 'Insumos', supplies_path, class: 'list-group-item active' %>
+            <% product.supplies.each do |supply|%>
+            <%= link_to supply.name, supply, class: 'list-group-item' %>
+            <%end%>
+          </div>
+          <p style="width: 70px"><%= link_to '', edit_product_path(product) , class: 'fas fa-edit' %> | <%= link_to '', product, method: :delete, data: { confirm: 'Estás seguro?' }, class: "fas fa-trash"  %></p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4"><%= product.name %><i class="material-icons right">close</i></span>
+          <p><%= product.description %></p>
+        </div>
       </div>
     </div>
+    <% end %>
   </div>
 </div>
