--- a/starweb/app/views/orders/edit.html.erb
+++ b/starweb/app/views/orders/edit.html.erb
@@ -3,8 +3,9 @@
     Pedidos
   </h1>
   <ol class="breadcrumb">
-    <li><%= link_to "Pedidos", orders_path %></li>
-    <li class="#">Editar</li>
+    <li><a href="">Pedidos</a></li>
+    <li><%= link_to "Index", orders_path %></li>
+    <li class="active">Editar</li>
   </ol>
 </div>
 
