--- a/starweb/app/views/users/_form.html.erb
+++ b/starweb/app/views/users/_form.html.erb
@@ -3,5 +3,5 @@
 <%= p.text_field :permission_level %>
 </p>
 <p>
-<%= p.submit "Enviar", class: 'btn btn-primary' %>
+<%= p.submit "Guardar", class: 'btn btn-primary' %>
 </p>
