--- a/starweb/app/views/users/edit.html.erb
+++ b/starweb/app/views/users/edit.html.erb
@@ -3,8 +3,8 @@
     Editar Usuario
   </h1>
   <ol class="breadcrumb">
-    <li><a href="#">Inicio</a></li>
-    <li><a href="#">Usuarios</a></li>
+    <li><a href="">Usuarios</a></li>
+    <li><%= link_to "Index", users_index_path %></li>
     <li class="active">Editar</li>
   </ol> 
 </div>
@@ -12,11 +12,7 @@
 <div id="page-inner"> 
   <div class="row">
     <div class="col-md-12">
-      <div class="card">
-        <div class="card-content"> 
           <p>
-            <h3>Editar permisos</h3><br>
-
 			       <%= form_for @user, :url => { :action => :update } do |p| %>
 			       <%= render "form", p: p %><br>
 			       <% end %>
@@ -25,9 +21,6 @@
           </p>
 
           <div class="clearBoth"><br/></div>
-
-        </div>
-      </div>
     </div>
     <!-- /. PAGE INNER  -->
   </div>
