--- a/starweb/app/views/users/index.html.erb
+++ b/starweb/app/views/users/index.html.erb
@@ -4,13 +4,13 @@
   </h1>
   <ol class="breadcrumb">
     <li><a href="#">Usuarios</a></li>
+    <li class="active">Index</li>
   </ol> 
 </div>
 
 <div id="page-inner">
   <div class="row">
     <div class="col-md-12">
-      <h3>Usuarios registrados</h3><br>
       <div class="table-responsive">
         <table class="table table-striped table-bordered table-hover">
           <thead>
