--- a/starweb/app/views/order_details/show.html.erb
+++ b/starweb/app/views/order_details/show.html.erb
@@ -1,13 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Firstname:</strong>
-  <%= @order_detail.firstname %>
-</p>
-
-<p>
-  <strong>Lastname:</strong>
-  <%= @order_detail.lastname %>
+  <strong>Name:</strong>
+  <%= @order_detail.name %>
 </p>
 
 <p>
