--- a/starweb/app/views/orders/_form_order_detail.html.erb
+++ b/starweb/app/views/orders/_form_order_detail.html.erb
@@ -10,6 +10,10 @@
       </ul>
     </div>
   <% end %>
+  
+  <div class="field">
+    <%= form.hidden_field :order_id, value: @order.id %>
+  </div>
 
   <div class="field">
     <%= form.label 'Nombre' %>
