Imagenes de prueba

--- a/starweb/app/views/products/index.html.erb
+++ b/starweb/app/views/products/index.html.erb
@@ -16,7 +16,7 @@
       <div class="col-md-3 col-sm-3">
         <div class="card">
           <div class="card-image waves-effect waves-block waves-light">
-            <%= image_tag product.image.url(:thumb)%>
+            <%= image_tag product.image.url(:medium)%>
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4"><%= product.name %><i class="material-icons right">more_vert</i></span><br>
