--- a/starweb/app/views/supplies/index.html.erb
+++ b/starweb/app/views/supplies/index.html.erb
@@ -13,29 +13,32 @@
   <div class="row">
     <div class="col-md-12">
       <div class="row">
-        <div class="table-responsive">
-          <table class="table table-striped table-bordered table-hover">
-            <thead>
-              <tr>
-                <th>Nombre</th>
-                <th>Imagen</th>
-                <th>Stock</th>
-                <th>Descripción</th>
-              </tr>
-            </thead>
-            <tbody>
-              <% @supplies.each do |supply| %>
-              <tr>
-                <td><%= supply.name %></td>
-                <td><%= image_tag supply.image.url(:thumb) %></td>
-                <td><%= supply.stock %></td>
-                <td><%= supply.description %></td>
-                <td style="width: 70px"><%= link_to '', edit_supply_path(supply), class: 'fas fa-edit' %> | <%= link_to '', supply, method: :delete, data: {  confirm: 'Estás seguro?' }, class: "fas fa-trash" %></td>
-              </tr>
-              <% end %>
-            </tbody>
-          </table>
-        </div>
+        <% if @supplies.empty? %>
+          <p>No ha agregado ningún insumo</p>
+        <% else %>
+          <% @supplies.each do |supply| %>
+          <div class="col-md-6">
+            <div class="card">
+              <p>
+                <div class="media">
+                  <div class="media-left media-middle">
+                    <a href="#">
+                      <%= image_tag supply.image.url(:thumb), class: 'media-object' %>
+                    </a>
+                  </div>
+                  <div class="media-body">
+                    <h5 class="media-heading"><%= supply.name %></h5>
+                    <p><b>Stock:</b> <%= supply.stock %></p>
+                    <p><%= supply.description %></p>
+                    <p><%= link_to '', edit_supply_path(supply), class: 'fas fa-edit' %> | <%= link_to '', supply, method: :delete, data: {  confirm: 'Estás seguro?' }, class: "fas fa-trash" %></p>
+                  </div>
+                </div>
+                <hr>
+              </p>
+            </div>
+          </div>
+          <%end%>
+        <%end%>
       </div>
     </div>
   </div>
